tests/paczka1/fuzzy1/58418201.err
Error in line 11: bh2V3C A498 40,9
Error in line 17: qPF S853 17,1
Error in line 16: gslDsh6qgGt A498 96,3
Error in line 34: qPF A914 ñ3,3
